[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-ai-streams"
version = "0.1.0"
description = "Simple Kafka-based reliable AI streaming"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aryaman Gurjar", email = "aryamangurjar6@gmail.com"}
]

dependencies = [
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
